--- a/Video_Website/css/style.css
+++ b/Video_Website/css/style.css
@@ -92,10 +92,34 @@ html[xmlns] .clearfix {
 * * * * * * * * * * * * * * * * * * * * */
 body {
   background: #00000;
+  background-image: "/Users/yatharthdhoot/Desktop/code/VideoWebsite/Video_Website/background.jpg";
+  background-attachment:fixed!important;
+background-repeat: no-repeat!important;
+background-position: top left!important;
   font: normal 14px/1.3 'helvetica neue', helvetica, arial;
   color: #bbb;
   text-shadow: #262729 0 -1px 0;
   -webkit-font-smoothing: antialiased;
+}
+#search {
+  margin-top: 2%;
+  margin-bottom: 20px;
+  width: 200px;
+}
+#sort {
+margin-bottom: 100px;
+}
+
+#heading {
+  margin-top: 150px;
+  color: #ffffff;
+}
+
+.box {
+  background-color: rgba(0,0,0,0.5);
+  width: 560px;
+  height: 100px;
+  margin-bottom: 20px;
 }
 
 body.clearfix {
@@ -134,17 +158,14 @@ header {
 .m20l {
   margin-left: 20px;
 }
-.p10 {
-  padding: 10px;
-}
+
 p {
   font-size: 12px;
-  color: #111111;
-  line-height: 1.3;
+  color: #ffffff;
 }
 h2 {
   font-size: 18px;
-  color: #111111;
+  color: #ffffff;
 }
 h2.look {
   font-size: 24px;
@@ -164,7 +185,6 @@ input {
   padding: 2px 10px;
   border-radius: 10px;
   border: solid 1px #555;
-  float: left;
   margin-right: 10px;
   margin-bottom: 15px;
   text-align: center;
