Added all the videos to the website along with all their tags

--- a/Video_Website/css/style.css
+++ b/Video_Website/css/style.css
@@ -129,9 +129,9 @@ margin-bottom: 100px;
 }
 
 .box {
+  padding: 10px;
   background-color: rgba(0,0,0,0.5);
   width: 560px;
-  height: 200px;
   margin-bottom: 20px;
 }
 
@@ -194,7 +194,7 @@ header {
   margin-bottom: 30px;
   height: 600px;
   width: 1000px;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.6);
   text-align: center;
   font-family: gotham;
 }
