--- a/Video_Website/css/style.css
+++ b/Video_Website/css/style.css
@@ -170,7 +170,7 @@ margin-bottom: 100px;
 .box_for_search {
   padding: 10px;
   background-color: rgba(0,0,0,0.5);
-  height: 250px;
+  height: 325px;
   margin-bottom: 20px;
   text-align: left;
 }
@@ -182,6 +182,14 @@ margin-bottom: 100px;
   height: 315px;
   margin-bottom: 20px;
   vertical-align: center;
+}
+
+#parent #popup {
+  display: none;
+}
+
+#parent:hover #popup {
+  display: block;
 }
 
 .video_box {
