--- a/Video_Website/css/style.css
+++ b/Video_Website/css/style.css
@@ -184,6 +184,14 @@ margin-bottom: 100px;
   vertical-align: center;
 }
 
+.box_all_videos {
+  padding: 10px;
+  background-color: rgba(0,0,0,0.5);
+  width: 560px;
+  margin-bottom: 20px;
+  vertical-align: center;
+}
+
 #parent #popup {
   display: none;
 }
